<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/gradient">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="15dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_decrease"

                    android:background="@drawable/resize_button_shape"
                    android:text="@string/decrease_button"
                    style="@style/ResizeButton"

                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_increase"

                    android:background="@drawable/resize_button_shape"
                    android:text="@string/increase_button"
                    style="@style/ResizeButton"

                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/cameraLayout"

                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/camera_shape"

                android:layout_marginTop="50dp"
                >

                <ImageView
                    android:id="@+id/camera"

                    android:scaleType="fitXY"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/camera_description"/>

                <TextView
                    android:id="@+id/noImageText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    style="@style/NoImageCamera"
                    android:text="@string/no_image_camera"
                    />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/cameraListText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/camera_list_text"
                style="@style/SpinnerHeader"
                />

            <Spinner
                android:id="@+id/cameraForm"

                android:layout_width="270dp"
                android:layout_height="50dp"

                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:background="@drawable/spinner_shape"
                android:popupBackground="#FFFFFF"
                android:dropDownSelector="?attr/selectableItemBackground"
                >

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/modeListText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/mode_list_text"
                style="@style/SpinnerHeader"
                />

            <Spinner
                android:id="@+id/modeForm"

                android:layout_width="270dp"
                android:layout_height="50dp"

                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"

                android:background="@drawable/spinner_shape"
                android:popupBackground="#FFFFFF"
                >

            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/contrastText"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:text="@string/contrast_text"
                style="@style/SpinnerHeader"
                />

            <EditText
                android:id="@+id/contrastForm"

                android:layout_width="270dp"
                android:layout_height="50dp"

                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:autofillHints="1.00"
                android:gravity="center_vertical"

                style="@style/Hint"
                android:background="@drawable/spinner_shape"

                android:hint="@string/contrast_hint"
                android:inputType="number">
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_stop"

                android:background="@drawable/camera_controls_shape"
                android:text="@string/camera_stop"
                style="@style/CameraControl"

                android:layout_width="120dp"
                android:layout_height="50dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/main_start"

                android:background="@drawable/camera_controls_shape"
                android:text="@string/camera_start"
                style="@style/CameraControl"

                android:layout_marginEnd="0dp"
                android:layout_width="120dp"
                android:layout_height="50dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="bottom"
        >

        <ImageButton
            android:id="@+id/main_home"

            android:background="@drawable/navigation_shape"
            android:contentDescription="@string/navigation_main_hint"
            android:importantForAccessibility="yes"
            android:src="@drawable/home_icon"
            style="@style/CameraControl"

            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="50dp"
            />

        <ImageButton
            android:id="@+id/main_profile"

            android:background="@drawable/navigation_shape"
            android:contentDescription="@string/navigation_profile_hint"
            android:importantForAccessibility="yes"
            android:src="@drawable/profile_icon"
            style="@style/CameraControl"

            android:layout_marginEnd="0dp"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            />

    </LinearLayout>

</FrameLayout>
